--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 /.idea
+.DS_Store
+.idea
+*.ai
+*.log
+*.pdf
+*.psd
+*.sublime*
+css/*.css
+node_modules/
+npm-debug.*
+Thumbs.db
+package-lock.json
+*.stackdump
+build/
