--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,14 +1,8 @@
 {
   "extends": "stylelint-config-htmlacademy",
+
   "rules": {
     "declaration-no-important": true,
-    "indentation": [
-      2,
-      {
-        "ignore": [
-          "inside-parens"
-        ]
-      }
-    ]
+    "indentation": [2, {"ignore": ["inside-parens"]}]
   }
 }
